@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-26T00:36:59Z",
-  "count_outdated" : 648,
-  "uniques_outdated" : 134,
+  "timestamp" : "2022-10-26T08:08:59Z",
+  "count_outdated" : 649,
+  "uniques_outdated" : 135,
   "count" : 656,
   "uniques" : 140,
   "views" : [
-    {
-      "timestamp": "2022-10-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-14T00:00:00Z",
       "count": 1,
