@@ -1,12 +1,7 @@
 {
-  "count": 8,
-  "uniques": 6,
+  "count": 7,
+  "uniques": 5,
   "views": [
-    {
-      "timestamp": "2022-10-12T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-10-14T00:00:00Z",
       "count": 1,
